fixed the horizontal scrolling

--- a/dalu-style.css
+++ b/dalu-style.css
@@ -1,140 +1,142 @@
 /* font-family: 'Montserrat', sans-serif; */
 
 body {
-    font-size: 15px;
-    font-family: 'Montserrat', sans-serif;
-    line-height: 3;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  line-height: 3;
 }
 
 /* Styling the Scroll-Bar */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(238, 238, 238);
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(238, 238, 238);
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #2128bd;
-    border-radius: 20px;
-    margin: 3px;
+  background: #2128bd;
+  border-radius: 20px;
+  margin: 3px;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .container-fluid.wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  position: relative;
 }
 
 .container-fluid.navbar {
-    position: fixed;
-    padding: 2rem 1rem;
-    z-index: 1030;
+  position: fixed;
+  padding: 2rem 1rem;
+  z-index: 1030;
 }
 
 .row {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .nav.right {
-    float: right;
+  float: right;
 }
 
 .nav.left {
-    margin: 0 auto 0 1rem;
+  margin: 0 auto 0 1rem;
 }
 
 .navigation {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .navigation div {
-    margin: 0 1.5em;
+  margin: 0 1.5em;
 }
 
 .benefits a {
-    font-size: 1em;
-    font-weight: 600;
-    color: #2128bd;
+  font-size: 1em;
+  font-weight: 600;
+  color: #2128bd;
 }
 
 .security a {
-    font-size: 1em;
-    font-weight: 600;
-    color: #2128bd;
+  font-size: 1em;
+  font-weight: 600;
+  color: #2128bd;
 }
 
 #loop {
-    display: inline-block;
-    margin: 0;
-    width: 100%;
-    font-weight: 600;
-    text-align: center;
-    /* Starting position */
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    /* Apply animation to this element */
-    -moz-animation: 3s linear infinite;
-    -webkit-animation: 3s linear infinite;
-    animation: track 3s linear infinite;
+  display: inline-block;
+  margin: 0;
+  width: 100%;
+  font-weight: 600;
+  text-align: center;
+  /* Starting position */
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  /* Apply animation to this element */
+  -moz-animation: 3s linear infinite;
+  -webkit-animation: 3s linear infinite;
+  animation: track 3s linear infinite;
 }
 
 /* Move it (define the animation) */
 
 @-moz-keyframes track {
-    0% {
-        -moz-transform: translateX(100%);
-    }
-    100% {
-        -moz-transform: translateX(-100%);
-    }
+  0% {
+    -moz-transform: translateX(100%);
+  }
+  100% {
+    -moz-transform: translateX(-100%);
+  }
 }
 
 @-webkit-keyframes track {
-    0% {
-        -webkit-transform: translateX(100%);
-    }
-    100% {
-        -webkit-transform: translateX(-100%);
-    }
+  0% {
+    -webkit-transform: translateX(100%);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+  }
 }
 
 @keyframes track {
-    0% {
-        -moz-transform: translateX(100%);
-        /* Firefox bug fix */
-        -webkit-transform: translateX(100%);
-        /* Firefox bug fix */
-        transform: translateX(100%);
-    }
-    100% {
-        -moz-transform: translateX(-100%);
-        /* Firefox bug fix */
-        -webkit-transform: translateX(-100%);
-        /* Firefox bug fix */
-        transform: translateX(-100%);
-    }
+  0% {
+    -moz-transform: translateX(100%);
+    /* Firefox bug fix */
+    -webkit-transform: translateX(100%);
+    /* Firefox bug fix */
+    transform: translateX(100%);
+  }
+  100% {
+    -moz-transform: translateX(-100%);
+    /* Firefox bug fix */
+    -webkit-transform: translateX(-100%);
+    /* Firefox bug fix */
+    transform: translateX(-100%);
+  }
 }
 
 .navigation button {
-    margin: 0 1em;
-    overflow: hidden;
-    border: none;
-    border-radius: 30px;
-    width: 130px;
-    background-color: #b4d1ff40;
-    color: #0864fe;
-    -moz-transition: ease-in-out .3s;
-    -webkit-transition: ease-in-out .3s;
-    transition: ease-in-out .3s;
+  margin: 0 1em;
+  overflow: hidden;
+  border: none;
+  border-radius: 30px;
+  width: 130px;
+  background-color: #b4d1ff40;
+  color: #0864fe;
+  -moz-transition: ease-in-out 0.3s;
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
 }
 
 .navigation button:hover {
@@ -146,85 +148,92 @@ a:hover {
 }
 
 .headerr h1 {
-    text-align: center;
-    font-weight: 600;
-    letter-spacing: -7px;
-    font-size: 6.7rem;
-    line-height: 6.5rem;
-    color: #2128bd;
+  text-align: center;
+  font-weight: 600;
+  letter-spacing: -7px;
+  font-size: 6.7rem;
+  line-height: 6.5rem;
+  color: #2128bd;
 }
 
 .headerr {
-    margin-top: 15rem;
+  margin-top: 15rem;
 }
 
 .video {
-    position: relative;
-    padding-top: 3em;
-    padding-bottom: 10em;
+  position: relative;
+  padding-top: 3em;
+  padding-bottom: 10em;
 }
 
 video {
-    border-radius: 30px;
+  border-radius: 30px;
 }
 
 .phone {
-    width: 330px;
-    height: 700px;
-    margin: 0 auto;
+  width: 330px;
+  height: 700px;
+  margin: 0 auto;
 }
 
 .phone-case {
-    background-image: url(https://wickret.cuberto.com/assets/img/demo/phone.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 700px;
+  background-image: url(https://wickret.cuberto.com/assets/img/demo/phone.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 700px;
 }
 
 .screen {
-    position: absolute;
-    bottom: 0;
-    top: 80px;
-    transform: translateX(0.9em);
-    width: 300px;
+  position: absolute;
+  bottom: 0;
+  top: 80px;
+  transform: translateX(0.9em);
+  width: 300px;
 }
 
 .container-fluid.fees {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    overflow: hidden;
-    background-color: #FDF0E5;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+  background-color: #fdf0e5;
 }
 
 .fees .header {
-    margin: 20em auto;
-    color: #2128bd;
+  margin: 20em auto;
+  color: #2128bd;
 }
 
 .fees .header h2 {
-    text-align: center;
-    font-weight: 600;
-    font-size: 4.5rem;
-    letter-spacing: -6px;
-    line-height: 1.1;
+  text-align: center;
+  font-weight: 600;
+  font-size: 4.5rem;
+  letter-spacing: -6px;
+  line-height: 1.1;
 }
 
 .fees .header p {
-    text-align: center;
-    font-size: 1.7em;
-    letter-spacing: -1px;
+  text-align: center;
+  font-size: 1.7em;
+  letter-spacing: -1px;
 }
 
-.s1, .s2, .s3, .s4, .s5, .s6, .s7, .s8 {
-    width: 39px;
-    height: 47px;
-    display: inline-block;
-    background-image: url(https://wickret.cuberto.com/assets/img/sprites/sprites.png);
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 50%;
-    top: 50%;
+.s1,
+.s2,
+.s3,
+.s4,
+.s5,
+.s6,
+.s7,
+.s8 {
+  width: 39px;
+  height: 47px;
+  display: inline-block;
+  background-image: url(https://wickret.cuberto.com/assets/img/sprites/sprites.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 50%;
+  top: 50%;
 }
 
 /* MEDIA QUERIES */
