--- a/hap-style.css
+++ b/hap-style.css
@@ -71,8 +71,6 @@ body {
 .section2-image {
   width: 100%;
 }
-.parent {
-}
 .image1 {
   width: 100%;
 }
